@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-Plugin-GitHubREADME-Badge
 
 {{$NEXT}}
+        - add args place (top or bottom)
 
 0.02  2014-09-22 19:12:02 CST
         - pass to FAYLAND
